# _bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  boost_repositories_generator.cc  modules.txt  setup_fork.cc  setup_module_folder.cc
bzlboostgen/: BUILD.bazel  bzlboostgen.cc
fork_template/: BUILD.bazel  MODULE.bazel  WORKSPACE
module_template/: BUILD.bazel
pull_template/.github/: pull.yml
scripts/: clone.nu  update.nu
