module(name = "bazelboost_bazel_maintainer_utils")

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "nlohmann_json", version = "3.11.2")
bazel_dep(name = "bazelboost_registry")

local_path_override(
    module_name = "bazelboost_registry",
    path = "../registry",
)
