load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
]

cc_library(
    name = "{NAME}_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "{NAME}",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":{NAME}_internal"],
)
